css/mystyles.css
.row-header{
    margin:0px auto;
    padding:0px auto;
}

.row-content {
    margin:0px auto;
    padding: 50px 0px 50px 0px;
    border-bottom: 1px ridge;
    min-height:400px;
}

.row-footer{
    background-color: #AfAfAf;
    margin:0px auto;
    padding: 20px 0px 20px 0px;
}

.jumbotron {
    padding:70px 30px 70px 30px;
    margin:0px;
    /* background: #7986CB ; */
    color:floralwhite;
    background-image: url("pexels-photo2.jpg")
}

address{
    font-size:80%;
    margin:0px;
    color:#0f0f0f;
}
body{
    padding:50px 0px 0px 0px;
    z-index:0;
}

.navbar-inverse {
     background: #303F9F;
}

.tab-pane {
    border-style: solid;
    border-width:2px;
    border-radius: 5px;
    padding:10px;
    margin-bottom:30px;
}

.navbar-inverse .navbar-nav > .active > a,
.navbar-inverse .navbar-nav > .active > a:hover,
.navbar-inverse .navbar-nav > .active > a:focus {
    color: #fff;
    background: #1A237E;
}

.navbar-inverse .navbar-nav > .open > a,
 .navbar-inverse .navbar-nav > .open > a:hover,
 .navbar-inverse .navbar-nav > .open > a:focus {
    color: #fff;
    background: #1A237E;
}

.navbar-inverse .navbar-nav .open .dropdown-menu> li> a,
.navbar-inverse .navbar-nav .open .dropdown-menu {
    background-color: #303F9F;
    color:#eeeeee;
}

.navbar-inverse .navbar-nav .open .dropdown-menu> li> a:hover {
    color:#000000;
}
 

